--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EliteKicks</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="./style/style.css">
 </head>
 
@@ -12,6 +13,10 @@
     <header class="navbar">
         <h1>EliteKicks</h1>
         <input type="text" placeholder="Buscar produtos...">
+        <img src="" alt="">
+        <div class="hamburguer">
+            <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+        </div>
         <div class="menu">
             <a href="">Home</a>
             <a href="">Produtos</a>
