--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="navbar">
         <h1>EliteKicks</h1>
         <input type="text" placeholder="Buscar produtos...">
-        <img src="" alt="">
+        <!-- <img src="" alt=""> -->
         <div class="hamburguer">
             <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
         </div>
