--- a/carrinho.html
+++ b/carrinho.html
@@ -26,6 +26,27 @@
             <a href="">Categorias</a>
         </div>
     </header>
+    <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/images/banner.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/banner.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/banner.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     <div class="container">
         <table class="table table-striped table-hover">
             <thead>
@@ -84,7 +105,7 @@
                 
                
                     <div class="row">
-                        <div class="col">
+                        <div class="Column">
                             Column
                                 <h1>Entrega</h1>
                                 <div class="mb-3">
